fix: fixed the display of the keyboard at different screen resolutions, fixed the shift behavior when clicking on the virtual keyboard

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -3,13 +3,17 @@ body {
   padding: 0;
   height: 100vh;
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .wrapper {
-  margin: 8% auto;
   max-width: 1024px;
-  width: 100vh;
+  height: 600px;
   overflow: hidden;
+  @media screen and (max-width: 767px) {
+    height: 420px;
+  }
   .textArea {
     margin: 0 auto;
     width: 750px;
@@ -24,12 +28,16 @@ body {
       border-radius: 2px; /*Скругление углов:2px*/
       font-size: 18pt; /*Размер шрифта:18pt*/
       background: #ecf0f1;
+      @media screen and (max-width: 767px) {
+        font-size: 14pt;
+      }
     }
     @media screen and (max-width: 767px) {
-      width: 480px;
+      width: 476px;
       border-width: 1px; /*Ширина рамки:2px*/
       border-radius: 1px; /*Скругление углов:2px*/
-      font-size: 14pt;
+      font-size: 12pt;
+      max-height: 150px;
     }
   }
   .keydbord-wrapper {
@@ -88,6 +96,30 @@ body {
     margin: 2px;
   }
 }
+.Backspace,
+.CapsLock,
+.ShiftLeft,
+.ShiftRight,
+.Enter,
+.Space,
+.Tab,
+.Delete,
+.ControlLeft,
+.ControlRight,
+.Rec,
+.Sound,
+.Lang,
+.MetaLeft,
+.AltLeft,
+.AltRight,
+.ArrowLeft,
+.ArrowRight,
+.ArrowUp,
+.ArrowDown {
+  span button {
+    background-color: #e9e5e9;
+  }
+}
 .Rec {
   span button {
     background-image: url("/src/assets/images/mic_black.png");
@@ -140,7 +172,7 @@ body {
   width: 100%;
   justify-content: center;
   align-items: center;
-  font-size: 1em;
+  font-size: 15px;
   font-weight: 600;
   border: none;
   border-radius: 5px;
@@ -150,6 +182,7 @@ body {
   &:hover {
     transition: all 0.2s;
     background-color: slateblue;
+    color: aliceblue;
   }
   &:active,
   &:focus {
